# AppointmentGuy

./: README.md
AppointmentGuy-backend/: .env  .gitignore  Snippet.py  app.py  list_foreign_keys.py  pyproject.toml  schemas.py
AppointmentGuy-backend/instance/: database.db
AppointmentGuy-backend/models/: service.py  user.py
AppointmentGuy-backend/resources/: appointment.py  auth.py  user.py
AppointmentGuy-fontend/: .gitignore  index.html  package-lock.json  package.json  render.yaml  snippet.js  vite.config.js
AppointmentGuy-fontend/src/: App.jsx  main.jsx
AppointmentGuy-fontend/src/api/: axios.jsx
BookMELib-backend/: .env  .gitignore  Dockerfile  README.md  Snippets.py  Trash.txt  app.py  main.py  pyproject.toml  requirements.txt  reset_alembic.py  schemas.py
BookMELib-backend/instance/: database.db
BookMELib-backend/models/: __init__.py  appointment.py  business.py  user.py
BookMELib-backend/resources/: appointment.py  auth.py  business.py  category.py  role.py  user.py
BookMELib-fontend/: Trash.txt  package-lock.json  package.json  snippet.js  tailwind.config.js  vite.config.js
BookMELib-fontend/src/: App.jsx
BookMELib-fontend/src/api/: axios.jsx
back-end/: .env  .env.dev  .gitignore  Trash.txt  app.py  db.py  requirements.txt
back-end/instance/: appointmentguy.db
back-end/models/: business.py
back-end/resources/: appointment.py  auth.py  business.py  role.py  user.py
back-end/routes/: appointment.py
front-end/: .gitignore  Trysave.jsx  package-lock.json  package.json  snippet.jsx  tsconfig.json
front-end/src/: App.jsx  main.jsx
(+227 files in other folders)
